# tt-explorer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml  test-local.sh
src/tt_explorer/: __init__.py  notebook.py  tt_explorer.py  web.py
templates/: index.html
test/: funny.py  notebook.ipynb  test.test  test.ttir  tosa-to-ttir.ttir  tt-explorer.py
test-adapter/: pyproject.toml
test-adapter/src/test_adapter/: main.py
test/ttir/: tosa-to-ttir.ttir
tt-adapter/: CMakeLists.txt  pyproject.toml  setup.py  tt_adapter.cc
tt-adapter/src/tt_adapter/: main.py  utils.py
tt_explorer/: tt-explorer.py
tt_explorer/templates/: index.html
