cmake_minimum_required(VERSION 3.20)

project(TTExplorer)
set(CMAKE_CXX_STANDARD 17 CACHE STRING "C++ standard to conform to")
add_subdirectory(tt-adapter)

# set(LLVM_DIR /Users/vprajapati/Documents/tt-explorer/third_party/tt-mlir/.local/toolchain/lib/cmake/llvm)
# set(MLIR_DIR /Users/vprajapati/Documents/tt-explorer/third_party/tt-mlir/.local/toolchain/lib/cmake/mlir)



# add_subdirectory(third_party/tt-mlir)

