[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tt-explorer"
version = "0.0.1"
description = "TT-Explorer is a development tool to better visualize, modify, and optimize compiled TT-MLIR Graphs."
authors = [{name = "Vraj Prajapati", email = "vprajapati@tenstorrent.com"}]
readme = "README.md"

dependencies = [
    "flask",
    "IPython",
    "ai-edge-model-explorer", # Can later replace with tt-adapter, but this mkaes it portable for now.
    "pre-commit",
    "black"
]

[project.scripts]
tt-explorer = "tt_explorer.tt_explorer:main"

[project.urls]
Repository = "https://github.com/justinchuby/model-explorer-onnx"
